distribution + file extra

--- a/report/main.tex
+++ b/report/main.tex
@@ -528,6 +528,118 @@ Lo stesso ragionamento può essere fatto nel caso contrario in cui malattie, com
 
 \subsection{Estensione dell'area di indagine}
 
+\begin{figure*} 
+\begin{center}
+		\begin{minipage}[t]{0.24\linewidth}
+\centerline{(a)}
+
+	\end{minipage}
+	\begin{minipage}[t]{0.24\linewidth}
+
+\centerline{(b)}
+	\end{minipage}
+	\begin{minipage}[t]{0.24\linewidth}
+\centerline{(c)}
+	\end{minipage}
+	\begin{minipage}[t]{0.24\linewidth}
+\centerline{(d)}
+	\end{minipage}
+\hfill
+	\begin{minipage}[c]{0.24\linewidth}
+		\centering
+	\def\svgwidth{\linewidth}
+\input{distribution_100.pdf_tex}
+						\newline
+	\end{minipage}
+	\begin{minipage}[c]{0.24\linewidth}
+		\centering
+	\def\svgwidth{\linewidth}
+\input{distribution_300.pdf_tex}
+	\newline
+	\end{minipage}
+	\begin{minipage}[c]{0.24\linewidth}
+		\centering
+			\includegraphics[width=\linewidth]{real_mesh_n1.png}
+			\newline
+	\end{minipage}
+	\begin{minipage}[c]{0.24\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{real_mesh_n2.png}
+		\newline
+	\end{minipage}
+\hfill
+	\begin{minipage}[b]{0.24\linewidth}
+		\includegraphics[width=\linewidth]{mesh_100.png}
+				\newline
+	\end{minipage} 
+	\begin{minipage}[b]{0.24\linewidth}
+		\includegraphics[width=\linewidth]{mesh_300.png}
+						\newline
+	\end{minipage} 
+	\begin{minipage}[b]{0.24\linewidth}
+	\includegraphics[width=\linewidth]{test_mesh_2.png}
+				\newline
+	\end{minipage}
+	\begin{minipage}[b]{0.24\linewidth}
+	\includegraphics[width=\linewidth]{test_mesh_1.png}
+					\newline
+	\end{minipage} 
+\hfill
+	\begin{minipage}[b]{0.24\linewidth}
+\centering
+		\footnotesize{$
+			\begin{bmatrix}
+			 1034.17 & 411.96 & -11.69 \\
+			411.96 & 1074.45 & -21.40 \\
+			-11.67 & -21.41 & 224.12 \\
+			\end{bmatrix}
+			$}
+	\end{minipage}
+	\begin{minipage}[b]{0.24\linewidth}
+\centering
+		\footnotesize{$
+			\begin{bmatrix}
+			 959.28 & 439.22 & 0.29 \\
+			439.21 & 995.56 & -11.64 \\
+			0.29 & -11.63 & 209.55 \\
+			\end{bmatrix}
+			$}
+	\end{minipage}
+	\begin{minipage}[b]{0.24\linewidth}
+\centering
+		\footnotesize{$
+			\begin{bmatrix}
+			 1744.59 & 701.46 & 81.03 \\
+			701.46 & 1649.60 & 49.05 \\
+			81.03 & 49.05 & 540.63 \\
+			\end{bmatrix}
+			$}
+	\end{minipage}
+	\begin{minipage}[b]{0.24\linewidth}
+\centering
+		\footnotesize{$
+			\begin{bmatrix}
+			 2237.42 & 887.87 & 19.48 \\
+			887.87 & 2394.87 & 71.54 \\
+			19.48 & 71.54 & 690.04 \\
+			\end{bmatrix}
+			$}
+	\end{minipage}
+\hfill
+	
+	\caption{Variazione della regione di interesse. (a) introduzione di 100 pori con disposizione casuale; (b) introduzione di 300 pori con disposizione casuale; (c) introduzione di 28 pori su un RVE di lato $3$ mm; (d) introduzione di 52 pori su un RVE di lato $5$ mm.}
+	\label{fig:area} 
+\end{center}
+\end{figure*}
+
+
+--> scrivi che non avrebbe senso estendere semplicemente l'area
+
+--> ESTENSIONE SU CASO SPECIFICA 
+
+-->> DISTRIBUZIONE DI PORI 
+
+--> MANTENENDO UNA PORE FRACTION DEL 60\%
 
 \subsection{Analisi caso specifica}
 
