--- a/report/main.tex
+++ b/report/main.tex
@@ -400,39 +400,6 @@ Il carico della colonna vertebrale ricade per la maggior parte sul corpo vertebr
 Inoltre, diversi campioni di osso trabecolare hanno mostrato diverse proprietà meccaniche a seconda della regione dove vengono prelevati. \citep{Keller:1989,Keller:1993}. Questo è segno della risposta dell'osso che, essendo un tessuto vivo, è in continuo rimodellamento. L'aumento delle proprietà do resisitenza a compressione nella parte centrale dell'osso è di fatto un risposta al maggior quota parte di stress verticali trasmessi dalla parte polposa del disco vertebrale rispetto all'adicente regione periferica di anelli fibrosi. 
 
 \subsection{Variazione della simmetria}
-\label{sec:variazione_simmetria}
-\begin{figure}[bt!] %% preferably at bottom or top of column
-	\centering
-	\def\svgwidth{\linewidth}
-	\input{var_geometr.pdf_tex}
-	\caption{Relazione tra $C_{11}$, $C_{22}$ e $\operatorname{AxR}$ }
-	\label{fig:geometric_variation}
-\end{figure}
-
-\begin{figure}[bt!] %% preferably at bottom or top of column
-	\centering
-	\def\svgwidth{\linewidth}
-	\input{variazione_Ebone.pdf_tex}
-	\caption{Variazione di $\mathbb C_{11}$ al variare di $E_b$}\label{fig:var_Ebone}
-\end{figure}
-
-\begin{figure}[bt!] %% preferably at bottom or top of column
-	\centering
-	\def\svgwidth{\linewidth}
-	\input{variazione_Enarrow.pdf_tex}
-	\caption{Variazione di $\mathbb C_{11}$ al variare di $E_m$}\label{fig:var_Emarrow}
-\end{figure}
-
-Le trabecole quindi rispondono al carico verticale posizionandosi prevalentemente lungo le linee di forza del carico e aumentano la loro densità e il loro spessore. Per indagare l'aumento delle proprietà materiali è stato considerato un RVE con pori variabili. Un modo semplice, ma accurato, di analizzare questo comportamento è quello di considerare pori ellittici. Introducendo pori ellittici la risposta dell'osso al carico verticale può essere interpretata come una riduzione del rapporto assiale e quindi un restringimento dell'ellisse lungo la direzione x. 
-
-Le campagne di simulazione condotte mostrano diversi cambiamenti nella matrice di rigidezza e quindi nelle proprietà meccaniche. Partendo da un rapporto assiale molto basso, quindi un'ellisse molto schiacciata, si osserva un grande aumento nel parametro $C_{11}$ e un lieve aumento anche del parametro $C_{22}$ rispetto al caso di riferimento (\cref{sec:homogen}). Viene completamente meno la simmetria materiale e l'isotropia della matrice di rigidezza, segno che la risposta di rigidezza lungo la direzione del semidiametro maggiore è più grande di quella nella direzione del semidiametro maggiore. Questo rispecchia quanto produce l'osso con la sua risposta di rimodellamento. 
-
-Con un rapporto assiale di $\operatorname{AxR}=0.1$ il coefficiente $C_{22}$ arriva a 1.462 GPa contro un $C_{11}=0.653$ GPa. Questa differenza del 44\% si riduce diminuendo il rapporto assiale. I due coefficienti convergono nel caso in cui il rapporto assiale tende a 1 ovvero nel caso in cui $C_{11}=C_{22}=C_{11}^{(om)}$. I limiti di Reuss e Voigt sono verificati in tutti i casi. I dati sono presenti in \cref{fig:geometry_variation} e\cref{fig:geometric_variation}. Nel diminuire il rapporto assiale il calo dei coefficienti di rigidezza segue un andamento lineare. Il coefficiente $C_{22}$ risente notevolmente di questo effetto mostrando una tasso di diminuzione del coefficiente $C_{11}$ con un andamento quasi costante. 
-
-Rimane evidente come al diminuire del rapporto assiale, e quindi anche della volume fraction, sia i limiti di Reuss e Voigt sia l'omogenizzazione numerica mostrino il coefficiente maggiore tendere al coefficiente $C_{22}^{(b)}$ della sola matrice ossea pur rimanendo inferiore al 20\%.  
-
-Lo stesso ragionamento può essere fatto nel caso contrario in cui malattie, come l'osteoporosi, portano ad una riduzione della massa ossea. Questo, rivisto come un aumento del rapporto assiale, mostra come l'osso trabecolare tende a ridurre le sue proprietà strutturali anche in zone dove precedentemente il rimodellamento osseo potrebbe aver apportato un precedentemente miglioramento strutturale (meno pori e maggior resistenza). Cambiamenti morfologici tra cui l'assottigliamento delle trabecole, aumento dello spazio inter-trabecolare e la perdita di connettività posso portare ad un calo drastico della resistenza fino al rischio di frattura vertebrale \citep{Ferguson:2003}.
-
 
 \begin{figure*} 
 	\centering
@@ -519,8 +486,43 @@ Lo stesso ragionamento può essere fatto nel caso contrario in cui malattie, com
 	\end{minipage} 
 	
 	\caption{Variazione della matrice di rigidezza al variare del rapporto assiale dei pori}
-\label{fig:geometry_variation} 
+	\label{fig:geometry_variation} 
 \end{figure*}
+
+\label{sec:variazione_simmetria}
+\begin{figure}[bt!] %% preferably at bottom or top of column
+	\centering
+	\def\svgwidth{\linewidth}
+	\input{var_geometr.pdf_tex}
+	\caption{Relazione tra $C_{11}$, $C_{22}$ e $\operatorname{AxR}$ }
+	\label{fig:geometric_variation}
+\end{figure}
+
+\begin{figure}[bt!] %% preferably at bottom or top of column
+	\centering
+	\def\svgwidth{\linewidth}
+	\input{variazione_Ebone.pdf_tex}
+	\caption{Variazione di $\mathbb C_{11}$ al variare di $E_b$}\label{fig:var_Ebone}
+\end{figure}
+
+\begin{figure}[bt!] %% preferably at bottom or top of column
+	\centering
+	\def\svgwidth{\linewidth}
+	\input{variazione_Enarrow.pdf_tex}
+	\caption{Variazione di $\mathbb C_{11}$ al variare di $E_m$}\label{fig:var_Emarrow}
+\end{figure}
+
+Le trabecole quindi rispondono al carico verticale posizionandosi prevalentemente lungo le linee di forza del carico e aumentano la loro densità e il loro spessore. Per indagare l'aumento delle proprietà materiali è stato considerato un RVE con pori variabili. Un modo semplice, ma accurato, di analizzare questo comportamento è quello di considerare pori ellittici. Introducendo pori ellittici la risposta dell'osso al carico verticale può essere interpretata come una riduzione del rapporto assiale e quindi un restringimento dell'ellisse lungo la direzione x. 
+
+Le campagne di simulazione condotte mostrano diversi cambiamenti nella matrice di rigidezza e quindi nelle proprietà meccaniche. Partendo da un rapporto assiale molto basso, quindi un'ellisse molto schiacciata, si osserva un grande aumento nel parametro $C_{11}$ e un lieve aumento anche del parametro $C_{22}$ rispetto al caso di riferimento (\cref{sec:homogen}). Viene completamente meno la simmetria materiale e l'isotropia della matrice di rigidezza, segno che la risposta di rigidezza lungo la direzione del semidiametro maggiore è più grande di quella nella direzione del semidiametro maggiore. Questo rispecchia quanto produce l'osso con la sua risposta di rimodellamento. 
+
+Con un rapporto assiale di $\operatorname{AxR}=0.1$ il coefficiente $C_{22}$ arriva a 1.462 GPa contro un $C_{11}=0.653$ GPa. Questa differenza del 44\% si riduce diminuendo il rapporto assiale. I due coefficienti convergono nel caso in cui il rapporto assiale tende a 1 ovvero nel caso in cui $C_{11}=C_{22}=C_{11}^{(om)}$. I limiti di Reuss e Voigt sono verificati in tutti i casi. I dati sono presenti in \cref{fig:geometry_variation} e\cref{fig:geometric_variation}. Nel diminuire il rapporto assiale il calo dei coefficienti di rigidezza segue un andamento lineare. Il coefficiente $C_{22}$ risente notevolmente di questo effetto mostrando una tasso di diminuzione del coefficiente $C_{11}$ con un andamento quasi costante. 
+
+Rimane evidente come al diminuire del rapporto assiale, e quindi anche della volume fraction, sia i limiti di Reuss e Voigt sia l'omogenizzazione numerica mostrino il coefficiente maggiore tendere al coefficiente $C_{22}^{(b)}$ della sola matrice ossea pur rimanendo inferiore al 20\%.  
+
+Lo stesso ragionamento può essere fatto nel caso contrario in cui malattie, come l'osteoporosi, portano ad una riduzione della massa ossea. Questo, rivisto come un aumento del rapporto assiale, mostra come l'osso trabecolare tende a ridurre le sue proprietà strutturali anche in zone dove precedentemente il rimodellamento osseo potrebbe aver apportato un precedentemente miglioramento strutturale (meno pori e maggior resistenza). Cambiamenti morfologici tra cui l'assottigliamento delle trabecole, aumento dello spazio inter-trabecolare e la perdita di connettività posso portare ad un calo drastico della resistenza fino al rischio di frattura vertebrale \citep{Ferguson:2003}.
+
+
 
 
 
@@ -776,7 +778,7 @@ COMPLETA DA TEORIAAAAAAA
 
 
 
-\begin{figure*}[b]
+\begin{figure*}[bt!]
 	\centering
 	\begin{minipage}[b]{0.49\linewidth}
 
