--- a/report/main.tex
+++ b/report/main.tex
@@ -397,7 +397,11 @@ Ulteriori informazioni sull'automazione e sulla convergenza di questo risultato 
 
 Il carico della colonna vertebrale ricade per la maggior parte sul corpo vertebrale e sui dischi intervertebrali. Il corpo vetebrale è fornato da osso trabecolare ad alta porosità con un guscio esterno altamente denso. Tuttavia, il guscio esterno è molto sottile ed è formato da un addensamento di osso trabecolare molto compatto, istologicamente differente dall'osso corticale. Diverse analisi agli elementi finito hanno stimato che il guscio esterno contribuisce per meno del 15\% alla Capacità di carico globale della vertebra \citep{Ferguson:2003, Silva:1997}.
 
-Inoltre, diversi campioni di osso trabecolare hanno mostrato diverse proprietà meccaniche a seconda della regione dove vengono prelevati. \citep{Keller:1989,Keller:1993}. Questo è segno della risposta dell'osso che, essendo un tessuto vivo, è in continuo rimodellamento. L'aumento delle proprietà do resisitenza a compressione nella parte centrale dell'osso è di fatto un risposta al maggior quota parte di stress verticali trasmessi dalla parte polposa del disco vertebrale rispetto all'adicente regione periferica di anelli fibrosi. 
+Inoltre, diversi campioni di osso trabecolare hanno mostrato diverse proprietà meccaniche a seconda della regione dove vengono prelevati. \citep{Keller:1989,Keller:1993}. Questo è segno della risposta dell'osso che, essendo un tessuto vivo e in continuo rimodellamento, è variabile e si adatta all'ambiente. L'aumento delle proprietà di resisitenza a compressione nella parte centrale dell'osso è di fatto un risposta al maggior carico verticale trasmesso dalla parte polposa del disco vertebrale rispetto all'adicente regione periferica di anelli fibrosi. 
+
+Sulla base di queste considerazioni sono state condotte ulteriori analisi variando la geometria del RVE e osservando come varia la risposta materiale risultante. Le variazioni considerate seguono dall'idealizzazione di alcuni fenomeni fisiologici che portano al rimodellamento osseo indotto dall'ambiente meccanico in cui si trova.
+
+
 
 \subsection{Variazione della simmetria}
 
@@ -490,27 +494,34 @@ Inoltre, diversi campioni di osso trabecolare hanno mostrato diverse proprietà 
 \end{figure*}
 
 \label{sec:variazione_simmetria}
+
 \begin{figure}[bt!] %% preferably at bottom or top of column
+
 	\centering
-	\def\svgwidth{\linewidth}
+	\def\svgwidth{0.9\linewidth}
 	\input{var_geometr.pdf_tex}
 	\caption{Relazione tra $C_{11}$, $C_{22}$ e $\operatorname{AxR}$ }
 	\label{fig:geometric_variation}
 \end{figure}
 
+
+
+
 \begin{figure}[bt!] %% preferably at bottom or top of column
 	\centering
-	\def\svgwidth{\linewidth}
+	\def\svgwidth{0.9\linewidth}
 	\input{variazione_Ebone.pdf_tex}
 	\caption{Variazione di $\mathbb C_{11}$ al variare di $E_b$}\label{fig:var_Ebone}
 \end{figure}
 
 \begin{figure}[bt!] %% preferably at bottom or top of column
 	\centering
-	\def\svgwidth{\linewidth}
+	\def\svgwidth{0.9\linewidth}
 	\input{variazione_Enarrow.pdf_tex}
 	\caption{Variazione di $\mathbb C_{11}$ al variare di $E_m$}\label{fig:var_Emarrow}
 \end{figure}
+
+
 
 Le trabecole quindi rispondono al carico verticale posizionandosi prevalentemente lungo le linee di forza del carico e aumentano la loro densità e il loro spessore. Per indagare l'aumento delle proprietà materiali è stato considerato un RVE con pori variabili. Un modo semplice, ma accurato, di analizzare questo comportamento è quello di considerare pori ellittici. Introducendo pori ellittici la risposta dell'osso al carico verticale può essere interpretata come una riduzione del rapporto assiale e quindi un restringimento dell'ellisse lungo la direzione x. 
 
