--- a/report/paper-refs.bib
+++ b/report/paper-refs.bib
@@ -34,6 +34,15 @@
 	pages =    {S97-S103},
 }
 
+@Article{Nazarian,
+	author =   {Nazarian, A., von Stechow, D., Zurakowski, D., Müller, R., & Snyder, B. D.},
+	title =    {Bone volume fraction explains the variation in strength and stiffness of cancellous bone affected by metastatic cancer and osteoporosis.e},
+	journal =      { Calcified tissue international },
+	year =     {2007},
+	volume =   {83},
+	pages =    {368-379},
+}
+
 
 
 
